Fixed text alignment issues
Commented out a * text-align: left; from index css and created independent text alignments in main containers for sections.

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   padding: 0; */
   box-sizing: border-box;
   scroll-behavior: smooth;
-  text-align: left;
+  /* text-align: left; */
 }
 
 .font-mont {
